--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "wl-bim-viewer": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
